# RTOS-FlameSensor

./: README.md
src/REPLICA/: main.py
src/RTOS/: CMakeLists.txt  main.c
